infrastructure/platform/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexo-raiden-keycloak
  namespace: platform
spec:
  type: ClusterIP
  selector:
    app: nexo-raiden-keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
