infrastructure/platform/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexo-raiden-keycloak
  namespace: platform
spec:
  ingressClassName: nginx
  rules:
    - host: keycloak.nexo-raiden.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexo-raiden-keycloak
                port:
                  number: 8080
